# oldwest

./: CMakeLists.txt  main.cpp
cmake_modules/: FindSDL2.cmake
